# agentwatch

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  start.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: requirements.txt  server.py
dashboard/: index.html
examples/: demo_data.py  manual_tracking.py  quickstart.py
sdk/: setup.py
sdk/agentwatch/: __init__.py  claude_code_import.py  client.py  config.py  detectors.py  events.py  pricing.py  wrapper.py
site/: index.html  vercel.json
site/demo/: index.html
tests/: test_sdk.py
