[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentwatch"
version = "0.1.0"
description = "Open-source token & cost observability for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Tandm Labs", email = "hello@tandmlabs.com"},
]
keywords = ["ai", "agents", "observability", "monitoring", "claude", "llm", "tokens", "cost"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
backend = ["fastapi>=0.115.0", "uvicorn>=0.30.0", "pydantic>=2.0"]
all = ["anthropic>=0.40.0", "fastapi>=0.115.0", "uvicorn>=0.30.0", "pydantic>=2.0"]
dev = ["pytest>=7.0", "ruff>=0.4.0"]

[project.urls]
Homepage = "https://github.com/zmaxgong/agentwatch"
Repository = "https://github.com/zmaxgong/agentwatch"
Issues = "https://github.com/zmaxgong/agentwatch/issues"
Changelog = "https://github.com/zmaxgong/agentwatch/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["sdk"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
